refactor(domain): encapsular entidades em Ingresso e corrigir criação de Pedido
- Substituída a associação direta de Pedido com Usuario, Filme, Sala e Sessao por uma entidade Ingresso
- Atualizada a lógica de criação do Pedido no construtor e no service
- Corrigido o mapeamento de Item, com associação explícita ao Pedido
- Adicionado construtor em Item para facilitar a conversão a partir de ItemEntradaDTO
- Evitado uso incorreto de forEach na atribuição de listas
- Separada a responsabilidade de montagem dos objetos do DTO (CriarPedidoEntradaDTO) para a camada de serviço